<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="start_title">War Of Suits ⚔️</string>
    <string name="start_button_new">Start a new game</string>
    <string name="start_button_join">Join to a game</string>
    <string name="start_button_leaderboard">Leaderboard</string>
    <string name="start_error_message">🤒 Something went wrong.</string>
    <string name="start_button_hide">Hide</string>
    <string name="waiting_title">Show the code #</string>
    <string name="waiting_title_complement">\ to the second player and get ready for the fight!</string>
    <string name="join_title">Enter the game code to run to the fight 🐴</string>
</resources>